syntax = "proto3";

package sso;

import "google/protobuf/timestamp.proto";

option go_package = ".;gen";
option csharp_namespace = "Onnywrite.SSO";

message Profile {
  optional string login = 1;
  optional string email = 2;
  optional string phone = 3;
};

message AccessToken { string token = 1; };

message RefreshToken { string token = 1; };

message SuperAccessToken { string token = 1; };

message SessionInfo {
  optional string browser = 1;
  optional string os = 2;
  optional string ip = 3;
}

message Sessions {
  repeated sso.SessionInfo sessions = 1;
}

message ProfileChangeRequest {
  string any_access_token = 1;
  sso.Profile new_profile = 2;
}

message ServiceInfo {
  int64 id = 1;
  int64 owner_id = 2;
  string name = 3;
  optional google.protobuf.Timestamp deleted_at = 4;
}