syntax = "proto3";
package auth;

option go_package = "onnywrite.sso.v1;gen";

message AuthRequest {
  optional string login = 1;
  optional string email = 2;
  optional string phone = 3;
  string password = 4;
  int64 service_id = 5;
}

message NullResponse {}

message Token { string token = 1; }